# OctoPrint-Maintenance-Reminder

./: MANIFEST.in  README.md  Taskfile.yml  pyproject.toml
extras/: README.txt  maintenance_reminder.md
extras/github/: bug_report.yml  feature_request.yml
octoprint_maintenance_reminder/: __init__.py
octoprint_maintenance_reminder/static/css/: maintenance_reminder.css
octoprint_maintenance_reminder/static/js/: maintenance_reminder.js  new.js
octoprint_maintenance_reminder/templates/: maintenance_reminder_modal.jinja2  maintenance_reminder_navbar.jinja2  maintenance_reminder_settings.jinja2
translations/: README.txt
